// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter component renders correctly basic Counter default 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "gap": 4,
      "justifyContent": "center",
    }
  }
  testID="counter"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "column",
          "gap": 4,
        }
      }
      testID="counter_unit_days"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
            }
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#000000",
                  "borderRadius": 12,
                  "color": "#ffffff",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "marginRight": 2,
                  "padding": 8,
                }
              }
            >
              <Text
                allowFontScaling={true}
                style={
                  [
                    {
                      "fontFamily": "odido_Heading_Medium",
                    },
                    {
                      "color": "#000000",
                      "fontSize": 24,
                      "fontWeight": "500",
                      "letterSpacing": 0.23999999463558197,
                      "lineHeight": 28,
                      "marginVertical": 0,
                      "textAlign": "left",
                    },
                    [
                      {
                        "color": "#ffffff",
                        "textAlign": "center",
                        "width": 16,
                      },
                      {},
                    ],
                  ]
                }
                testID="heading"
              >
                0
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#000000",
                  "borderRadius": 12,
                  "color": "#ffffff",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "marginRight": 0,
                  "padding": 8,
                }
              }
            >
              <Text
                allowFontScaling={true}
                style={
                  [
                    {
                      "fontFamily": "odido_Heading_Medium",
                    },
                    {
                      "color": "#000000",
                      "fontSize": 24,
                      "fontWeight": "500",
                      "letterSpacing": 0.23999999463558197,
                      "lineHeight": 28,
                      "marginVertical": 0,
                      "textAlign": "left",
                    },
                    [
                      {
                        "color": "#ffffff",
                        "textAlign": "center",
                        "width": 16,
                      },
                      {},
                    ],
                  ]
                }
                testID="heading"
              >
                3
              </Text>
            </View>
          </View>
        </View>
        <Text
          allowFontScaling={true}
          style={
            [
              {
                "fontFamily": "odido_Heading_Medium",
              },
              {
                "color": "#000000",
                "fontSize": 24,
                "fontWeight": "500",
                "letterSpacing": 0.23999999463558197,
                "lineHeight": 28,
                "marginVertical": 0,
                "textAlign": "left",
              },
              {
                "alignItems": "center",
                "borderRadius": 12,
                "color": "#000000",
                "flexDirection": "column",
                "justifyContent": "center",
                "paddingVertical": 8,
                "textAlign": "center",
                "width": 8,
              },
            ]
          }
          testID="heading"
        >
          :
        </Text>
      </View>
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "fontFamily": "odido_Paragraph_Regular",
            },
            {
              "color": "#000000",
              "fontSize": 14,
              "letterSpacing": 0.20999999344348907,
              "lineHeight": 20,
              "textAlign": "left",
            },
            [
              {
                "alignItems": "center",
                "alignSelf": "center",
                "color": "#000000",
                "display": "flex",
                "justifyContent": "center",
                "textAlign": "center",
                "width": 66,
              },
              {},
            ],
          ]
        }
        testID="counter_label_days_paragraph"
      >
        Dagen
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "column",
          "gap": 4,
        }
      }
      testID="counter_unit_hours"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
            }
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#000000",
                  "borderRadius": 12,
                  "color": "#ffffff",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "marginRight": 2,
                  "padding": 8,
                }
              }
            >
              <Text
                allowFontScaling={true}
                style={
                  [
                    {
                      "fontFamily": "odido_Heading_Medium",
                    },
                    {
                      "color": "#000000",
                      "fontSize": 24,
                      "fontWeight": "500",
                      "letterSpacing": 0.23999999463558197,
                      "lineHeight": 28,
                      "marginVertical": 0,
                      "textAlign": "left",
                    },
                    [
                      {
                        "color": "#ffffff",
                        "textAlign": "center",
                        "width": 16,
                      },
                      {},
                    ],
                  ]
                }
                testID="heading"
              >
                0
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#000000",
                  "borderRadius": 12,
                  "color": "#ffffff",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "marginRight": 0,
                  "padding": 8,
                }
              }
            >
              <Text
                allowFontScaling={true}
                style={
                  [
                    {
                      "fontFamily": "odido_Heading_Medium",
                    },
                    {
                      "color": "#000000",
                      "fontSize": 24,
                      "fontWeight": "500",
                      "letterSpacing": 0.23999999463558197,
                      "lineHeight": 28,
                      "marginVertical": 0,
                      "textAlign": "left",
                    },
                    [
                      {
                        "color": "#ffffff",
                        "textAlign": "center",
                        "width": 16,
                      },
                      {},
                    ],
                  ]
                }
                testID="heading"
              >
                0
              </Text>
            </View>
          </View>
        </View>
        <Text
          allowFontScaling={true}
          style={
            [
              {
                "fontFamily": "odido_Heading_Medium",
              },
              {
                "color": "#000000",
                "fontSize": 24,
                "fontWeight": "500",
                "letterSpacing": 0.23999999463558197,
                "lineHeight": 28,
                "marginVertical": 0,
                "textAlign": "left",
              },
              {
                "alignItems": "center",
                "borderRadius": 12,
                "color": "#000000",
                "flexDirection": "column",
                "justifyContent": "center",
                "paddingVertical": 8,
                "textAlign": "center",
                "width": 8,
              },
            ]
          }
          testID="heading"
        >
          :
        </Text>
      </View>
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "fontFamily": "odido_Paragraph_Regular",
            },
            {
              "color": "#000000",
              "fontSize": 14,
              "letterSpacing": 0.20999999344348907,
              "lineHeight": 20,
              "textAlign": "left",
            },
            [
              {
                "alignItems": "center",
                "alignSelf": "center",
                "color": "#000000",
                "display": "flex",
                "justifyContent": "center",
                "textAlign": "center",
                "width": 66,
              },
              {},
            ],
          ]
        }
        testID="counter_label_hours_paragraph"
      >
        Uur
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "column",
          "gap": 4,
        }
      }
      testID="counter_unit_minutes"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
            }
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#000000",
                  "borderRadius": 12,
                  "color": "#ffffff",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "marginRight": 2,
                  "padding": 8,
                }
              }
            >
              <Text
                allowFontScaling={true}
                style={
                  [
                    {
                      "fontFamily": "odido_Heading_Medium",
                    },
                    {
                      "color": "#000000",
                      "fontSize": 24,
                      "fontWeight": "500",
                      "letterSpacing": 0.23999999463558197,
                      "lineHeight": 28,
                      "marginVertical": 0,
                      "textAlign": "left",
                    },
                    [
                      {
                        "color": "#ffffff",
                        "textAlign": "center",
                        "width": 16,
                      },
                      {},
                    ],
                  ]
                }
                testID="heading"
              >
                0
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#000000",
                  "borderRadius": 12,
                  "color": "#ffffff",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "marginRight": 0,
                  "padding": 8,
                }
              }
            >
              <Text
                allowFontScaling={true}
                style={
                  [
                    {
                      "fontFamily": "odido_Heading_Medium",
                    },
                    {
                      "color": "#000000",
                      "fontSize": 24,
                      "fontWeight": "500",
                      "letterSpacing": 0.23999999463558197,
                      "lineHeight": 28,
                      "marginVertical": 0,
                      "textAlign": "left",
                    },
                    [
                      {
                        "color": "#ffffff",
                        "textAlign": "center",
                        "width": 16,
                      },
                      {},
                    ],
                  ]
                }
                testID="heading"
              >
                0
              </Text>
            </View>
          </View>
        </View>
        <Text
          allowFontScaling={true}
          style={
            [
              {
                "fontFamily": "odido_Heading_Medium",
              },
              {
                "color": "#000000",
                "fontSize": 24,
                "fontWeight": "500",
                "letterSpacing": 0.23999999463558197,
                "lineHeight": 28,
                "marginVertical": 0,
                "textAlign": "left",
              },
              {
                "alignItems": "center",
                "borderRadius": 12,
                "color": "#000000",
                "flexDirection": "column",
                "justifyContent": "center",
                "paddingVertical": 8,
                "textAlign": "center",
                "width": 8,
              },
            ]
          }
          testID="heading"
        >
          :
        </Text>
      </View>
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "fontFamily": "odido_Paragraph_Regular",
            },
            {
              "color": "#000000",
              "fontSize": 14,
              "letterSpacing": 0.20999999344348907,
              "lineHeight": 20,
              "textAlign": "left",
            },
            [
              {
                "alignItems": "center",
                "alignSelf": "center",
                "color": "#000000",
                "display": "flex",
                "justifyContent": "center",
                "textAlign": "center",
                "width": 66,
              },
              {},
            ],
          ]
        }
        testID="counter_label_minutes_paragraph"
      >
        Min.
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "column",
          "gap": 4,
        }
      }
      testID="counter_unit_seconds"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
            }
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#000000",
                  "borderRadius": 12,
                  "color": "#ffffff",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "marginRight": 2,
                  "padding": 8,
                }
              }
            >
              <Text
                allowFontScaling={true}
                style={
                  [
                    {
                      "fontFamily": "odido_Heading_Medium",
                    },
                    {
                      "color": "#000000",
                      "fontSize": 24,
                      "fontWeight": "500",
                      "letterSpacing": 0.23999999463558197,
                      "lineHeight": 28,
                      "marginVertical": 0,
                      "textAlign": "left",
                    },
                    [
                      {
                        "color": "#ffffff",
                        "textAlign": "center",
                        "width": 16,
                      },
                      {},
                    ],
                  ]
                }
                testID="heading"
              >
                0
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#000000",
                  "borderRadius": 12,
                  "color": "#ffffff",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "marginRight": 0,
                  "padding": 8,
                }
              }
            >
              <Text
                allowFontScaling={true}
                style={
                  [
                    {
                      "fontFamily": "odido_Heading_Medium",
                    },
                    {
                      "color": "#000000",
                      "fontSize": 24,
                      "fontWeight": "500",
                      "letterSpacing": 0.23999999463558197,
                      "lineHeight": 28,
                      "marginVertical": 0,
                      "textAlign": "left",
                    },
                    [
                      {
                        "color": "#ffffff",
                        "textAlign": "center",
                        "width": 16,
                      },
                      {},
                    ],
                  ]
                }
                testID="heading"
              >
                0
              </Text>
            </View>
          </View>
        </View>
      </View>
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "fontFamily": "odido_Paragraph_Regular",
            },
            {
              "color": "#000000",
              "fontSize": 14,
              "letterSpacing": 0.20999999344348907,
              "lineHeight": 20,
              "textAlign": "left",
            },
            [
              {
                "alignItems": "center",
                "alignSelf": "center",
                "color": "#000000",
                "display": "flex",
                "justifyContent": "center",
                "textAlign": "center",
                "width": 66,
              },
              {},
            ],
          ]
        }
        testID="counter_label_seconds_paragraph"
      >
        Sec.
      </Text>
    </View>
  </View>
</View>
`;

exports[`Counter component renders correctly basic Counter hours variant sublte 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "gap": 4,
      "justifyContent": "center",
    }
  }
  testID="counter"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "column",
          "gap": 4,
        }
      }
      testID="counter_unit_hours"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
            }
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#ecf2ff",
                  "borderRadius": 12,
                  "color": "#000000",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "marginRight": 4,
                  "padding": 8,
                }
              }
            >
              <Text
                allowFontScaling={true}
                style={
                  [
                    {
                      "fontFamily": "odido_Heading_Medium",
                    },
                    {
                      "color": "#000000",
                      "fontSize": 28,
                      "fontWeight": "500",
                      "letterSpacing": 0.2800000011920929,
                      "lineHeight": 32,
                      "marginVertical": 0,
                      "textAlign": "left",
                    },
                    [
                      {
                        "color": "#000000",
                        "textAlign": "center",
                        "width": 24,
                      },
                      {},
                    ],
                  ]
                }
                testID="heading"
              >
                7
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#ecf2ff",
                  "borderRadius": 12,
                  "color": "#000000",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "marginRight": 0,
                  "padding": 8,
                }
              }
            >
              <Text
                allowFontScaling={true}
                style={
                  [
                    {
                      "fontFamily": "odido_Heading_Medium",
                    },
                    {
                      "color": "#000000",
                      "fontSize": 28,
                      "fontWeight": "500",
                      "letterSpacing": 0.2800000011920929,
                      "lineHeight": 32,
                      "marginVertical": 0,
                      "textAlign": "left",
                    },
                    [
                      {
                        "color": "#000000",
                        "textAlign": "center",
                        "width": 24,
                      },
                      {},
                    ],
                  ]
                }
                testID="heading"
              >
                2
              </Text>
            </View>
          </View>
        </View>
        <Text
          allowFontScaling={true}
          style={
            [
              {
                "fontFamily": "odido_Heading_Medium",
              },
              {
                "color": "#000000",
                "fontSize": 28,
                "fontWeight": "500",
                "letterSpacing": 0.2800000011920929,
                "lineHeight": 32,
                "marginVertical": 0,
                "textAlign": "left",
              },
              {
                "alignItems": "center",
                "borderRadius": 12,
                "color": "#000000",
                "flexDirection": "column",
                "justifyContent": "center",
                "paddingVertical": 8,
                "textAlign": "center",
                "width": 12,
              },
            ]
          }
          testID="heading"
        >
          :
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "column",
          "gap": 4,
        }
      }
      testID="counter_unit_minutes"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "flex-start",
            }
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#ecf2ff",
                  "borderRadius": 12,
                  "color": "#000000",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "marginRight": 4,
                  "padding": 8,
                }
              }
            >
              <Text
                allowFontScaling={true}
                style={
                  [
                    {
                      "fontFamily": "odido_Heading_Medium",
                    },
                    {
                      "color": "#000000",
                      "fontSize": 28,
                      "fontWeight": "500",
                      "letterSpacing": 0.2800000011920929,
                      "lineHeight": 32,
                      "marginVertical": 0,
                      "textAlign": "left",
                    },
                    [
                      {
                        "color": "#000000",
                        "textAlign": "center",
                        "width": 24,
                      },
                      {},
                    ],
                  ]
                }
                testID="heading"
              >
                0
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#ecf2ff",
                  "borderRadius": 12,
                  "color": "#000000",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "marginRight": 0,
                  "padding": 8,
                }
              }
            >
              <Text
                allowFontScaling={true}
                style={
                  [
                    {
                      "fontFamily": "odido_Heading_Medium",
                    },
                    {
                      "color": "#000000",
                      "fontSize": 28,
                      "fontWeight": "500",
                      "letterSpacing": 0.2800000011920929,
                      "lineHeight": 32,
                      "marginVertical": 0,
                      "textAlign": "left",
                    },
                    [
                      {
                        "color": "#000000",
                        "textAlign": "center",
                        "width": 24,
                      },
                      {},
                    ],
                  ]
                }
                testID="heading"
              >
                0
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "fontFamily": "odido_Paragraph_Regular",
        },
        {
          "color": "#000000",
          "fontSize": 14,
          "letterSpacing": 0.20999999344348907,
          "lineHeight": 20,
          "textAlign": "left",
        },
        {
          "alignItems": "center",
          "color": "#000000",
          "justifyContent": "center",
          "textAlign": "center",
          "width": "100%",
        },
      ]
    }
    testID="paragraph"
  >
    Uur over
  </Text>
</View>
`;
